# aurora

./: .gitignore  Cargo.toml  README.md  all_aurora_code.txt  project_dump.txt  show_all_aurora_code.sh
astral_hyper_engines/cluster_alpha_economic_sovereign/novavault_flux_finance/: Cargo.toml  README.md
astral_hyper_engines/cluster_alpha_economic_sovereign/novavault_flux_finance/src/: lib.rs
astral_hyper_engines/cluster_alpha_economic_sovereign/soulstar_matrix_identity/: Cargo.toml  README.md
astral_hyper_engines/cluster_alpha_economic_sovereign/soulstar_matrix_identity/src/: lib.rs
astral_hyper_engines/cluster_alpha_economic_sovereign/starsenate_collectives_governance/: Cargo.toml  README.md
astral_hyper_engines/cluster_alpha_economic_sovereign/starsenate_collectives_governance/src/: lib.rs
astral_hyper_engines/cluster_beta_material_ecological/gaiapulse_engine/: Cargo.toml  README.md
astral_hyper_engines/cluster_beta_material_ecological/gaiapulse_engine/src/: lib.rs
core_modules/cess_mesh/: mesh_simulator.py  tests.py
core_modules/cto/: cto_dsl.py  cto_types.py  tests.py
core_modules/hnk/: sheaf_hypergraph_network.py  tests.py
core_modules/pqc/: pqc_key_exchange.py  tests.py
core_modules/tgif_flow/: intent.py  router.py  tests.py
developer_ecosystem_astroforge/astrocli_deployment_nexus/: Cargo.toml  README.md
developer_ecosystem_astroforge/astrocli_deployment_nexus/src/: lib.rs
developer_ecosystem_astroforge/cosmic_knowledge_nexus_community/: Cargo.toml  README.md
developer_ecosystem_astroforge/nebulacode_forge_sdk/: Cargo.toml  README.md
developer_ecosystem_astroforge/starforge_grants/: Cargo.toml  README.md
developer_ecosystem_astroforge/starforge_grants/src/: lib.rs
docs/: README.md
ecological_synergy/ecoholo_badges_carbon_sentinels/: Cargo.toml  README.md
ecological_synergy/novacarbon_markets/: Cargo.toml  README.md
ecological_synergy/voidfootprint_design/: Cargo.toml  README.md
ethical_oversight_ego/evolutionverse_crucible/: Cargo.toml  README.md
ethical_oversight_ego/nexus_cosmic_introspection_nci/: Cargo.toml  README.md
ethical_oversight_ego/omnimind_balancer_ux/: Cargo.toml  README.md
ethical_oversight_ego/primeaxiom_vault/: Cargo.toml  README.md
governance_economy/cosmic_flux_regulator/: Cargo.toml  README.md
governance_economy/econova_incentives/: Cargo.toml  README.md
governance_economy/econova_incentives/src/: lib.rs
governance_economy/oraclesync_futarchy/: Cargo.toml  README.md
governance_economy/universal_flux_share/: Cargo.toml  README.md
infra/: README.md
knowledge_nexus_isn/cosmic_data_constellation/: Cargo.toml  README.md
knowledge_nexus_isn/cosmic_data_constellation/src/: lib.rs
knowledge_nexus_isn/distributed_cosmic_memory/: Cargo.toml  README.md
knowledge_nexus_isn/ontological_codex/: Cargo.toml  README.md
knowledge_nexus_isn/semantic_synapse_interfaces/: Cargo.toml  README.md
node1_data/: node_key.pk8  sequencer-node1_blockchain.jsonl
node2_data/: node_key.pk8  regular-node2_blockchain.jsonl  validator-node2_blockchain.jsonl
node3_data/: node_key.pk8  validator-node3_blockchain.jsonl
nodes/graviton_edge_node/: Cargo.toml
nodes/graviton_edge_node/src/: main.rs
omniverse_reality_simulation/chronoforge_simulator/: Cargo.toml  README.md
omniverse_reality_simulation/eonmirror_interface/: Cargo.toml  README.md
risk_mitigation/ecoresilience_strategies/: Cargo.toml  README.md
risk_mitigation/governancesafe_mechanisms/: Cargo.toml  README.md
risk_mitigation/nebulashield_defenses/: Cargo.toml  README.md
risk_mitigation/stellarrisk_balancer_economic/: Cargo.toml  README.md
roadmap_future_vision/: README.md
security_privacy_aegis/cosmic_justice_enforcers/: Cargo.toml  README.md
security_privacy_aegis/cosmic_justice_enforcers/src/: lib.rs
security_privacy_aegis/nebulakey_shards_mpc/: Cargo.toml  README.md
security_privacy_aegis/neurosync_sanctum_privacy/: Cargo.toml  README.md
security_privacy_aegis/voidproof_engine_zkp/: Cargo.toml  README.md
sgs_foundations/aethercore_runtime/: Cargo.toml  README.md
sgs_foundations/aethercore_runtime/src/: lib.rs
sgs_foundations/celestial_synapse_network_csn/: Cargo.toml  README.md
sgs_foundations/ecliptic_concordance/: Cargo.toml  README.md
sgs_foundations/ecliptic_concordance/src/: lib.rs
sgs_foundations/stellar_compression_arrays/: Cargo.toml  README.md
sgs_foundations/triad_web/: Cargo.toml
sgs_foundations/triad_web/graviton_edge/: Cargo.toml  README.md
sgs_foundations/triad_web/graviton_edge/src/: lib.rs
sgs_foundations/triad_web/nebula_pulse_swarm/: Cargo.toml  README.md
sgs_foundations/triad_web/nebula_pulse_swarm/src/: lib.rs
sgs_foundations/triad_web/src/: lib.rs  libp2p_service.rs  network_behaviour.rs  tcp_p2p.rs
sgs_foundations/triad_web/titanforge_grid/: Cargo.toml  README.md
sgs_foundations/triad_web/titanforge_grid/src/: lib.rs
synergy_strategies_adoption/cosmic_outreach_lattice/: Cargo.toml  README.md
synergy_strategies_adoption/interrealm_nexus_bridges/: Cargo.toml  README.md
synergy_strategies_adoption/interstellar_expansion_vectors/: Cargo.toml  README.md
synergy_strategies_adoption/voidinclusion_initiatives/: Cargo.toml  README.md
testnet_data/sequencer_alpha_data/: app_signing_key.skhex  sequencer-alpha_blockchain.jsonl
testnet_data/validator_bravo_data/: app_signing_key.skhex
testnet_data/validator_charlie_data/: app_signing_key.skhex
tests/: README.md
tests/simulation_runner/: Cargo.toml
tests/simulation_runner/src/: main.rs
tools/aurora_testnet_cli/: Cargo.toml
tools/aurora_testnet_cli/src/: main.rs
trust_obligation_stl_von/verifiable_obligation_nexus_von/: Cargo.toml  README.md
trust_obligation_stl_von/verifiable_obligation_nexus_von/src/: lib.rs
utils/sample_wasm_modules/sample_wasm_host_interaction/: Cargo.toml
utils/sample_wasm_modules/sample_wasm_host_interaction/src/: lib.rs
utils/sample_wasm_modules/sample_wasm_module_add/: Cargo.toml
utils/sample_wasm_modules/sample_wasm_module_add/src/: lib.rs
(+69 files in other folders)
