[package]
name = "econova_incentives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
cosmic_data_constellation = { path = "../../knowledge_nexus_isn/cosmic_data_constellation" }
novavault_flux_finance = { path = "../../astral_hyper_engines/cluster_alpha_economic_sovereign/novavault_flux_finance" }
 # Add dependencies here
