# governance_economy/econova_incentives/Cargo.toml
[package]
name = "econova_incentives"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
cosmic_data_constellation = { path = "../../knowledge_nexus_isn/cosmic_data_constellation" }
novavault_flux_finance = { path = "../../astral_hyper_engines/cluster_alpha_economic_sovereign/novavault_flux_finance" }
ecliptic_concordance = { path = "../../sgs_foundations/ecliptic_concordance" } # ADDED for TransferAucPayload