[package]
name = "cosmic_data_constellation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4"] }
 # Add dependencies here
