[package]
name = "graviton_edge_node"
version = "0.1.0"
edition = "2021"

[dependencies]
ecliptic_concordance = { path = "../../sgs_foundations/ecliptic_concordance" }
triad_web = { path = "../../sgs_foundations/triad_web" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3.3"
log = "0.4"
env_logger = "0.10"
libp2p = { version = "0.53.2" } 
hex = "0.4"
ed25519-dalek = { version = "2.1.1", features = ["serde"] } 
rand = "0.8"
sha2 = "0.10" 
once_cell = "1.19.0"
novavault_flux_finance = { path = "../../astral_hyper_engines/cluster_alpha_economic_sovereign/novavault_flux_finance" }
aethercore_runtime = { path = "../../sgs_foundations/aethercore_runtime" } # Ensure this is present
wasmi = "0.31.2" # Ensure this is present for F32