[package]
name = "aethercore_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.31.2" # Check for latest compatible version
uuid = { version = "1.8.0", features = ["v4"] }
once_cell = "1.19.0"

 # Add dependencies here
