[package]
name = "aethercore_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasmi = "0.31.2" 
uuid = { version = "1.8.0", features = ["v4"] }
once_cell = "1.19.0"
# Ensure this is present if not already
cosmic_data_constellation = { path = "../../knowledge_nexus_isn/cosmic_data_constellation" }
hex = "0.4" # For logging byte arrays nicely if needed