[package]
name = "ecliptic_concordance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voidproof_engine_zkp = { path = "../../security_privacy_aegis/voidproof_engine_zkp" }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4"] }
 # Add dependencies here
