# sgs_foundations/ecliptic_concordance/Cargo.toml
[package]
name = "ecliptic_concordance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
# voidproof_engine_zkp = { path = "../../security_privacy_aegis/voidproof_engine_zkp" } # Not directly used here yet
# once_cell = "1.19.0" # Not directly used here yet
log = "0.4" # <--- ADD THIS LINE