# sgs_foundations/ecliptic_concordance/Cargo.toml
[package]
name = "ecliptic_concordance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4"
hex = { version = "0.4", features = ["serde"] } # <--- MODIFIED HERE
sha2 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
rand = "0.8"