[package]
name = "triad_web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1", features = ["full"] } 
async-trait = "0.1.77"
bytes = "1.5.0" 
bincode = "1.3.3" 
futures = "0.3" # For stream utilities, might not be strictly needed for this simple version
uuid = { version = "1.8.0", features = ["v4"] } # For message IDs

# For logging within triad_web itself if desired
# log = "0.4"
# env_logger = "0.10"
