[package]
name = "triad_web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3" 
tokio = { version = "1", features = ["full"] } 
async-trait = "0.1.77"
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4" 
env_logger = "0.10" # For libp2p logging integration

# libp2p dependencies
libp2p = { version = "0.53.2", features = [
    "tokio", 
    "gossipsub", 
    "mdns", 
    "kad", 
    "ping", 
    "yamux", 
    "tcp", 
    "noise", 
    "macros", 
    "identify",
]}

ecliptic_concordance = { path = "../ecliptic_concordance" }