[package]
name = "aurora_testnet_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] } # Ensure "net"
uuid = { version = "1.8.0", features = ["v4"] } # For generating request IDs
