[package]
name = "verifiable_obligation_nexus_von"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
cosmic_data_constellation = { path = "../../knowledge_nexus_isn/cosmic_data_constellation" }
uuid = { version = "1.8.0", features = ["v4"] }
 # Add dependencies here
