[package]
name = "novavault_flux_finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 # Add dependencies here
cosmic_data_constellation = { path = "../../../knowledge_nexus_isn/cosmic_data_constellation" }
semantic_synapse_interfaces = { path = "../../../knowledge_nexus_isn/semantic_synapse_interfaces" }
aethercore_runtime = { path = "../../../sgs_foundations/aethercore_runtime" } # CORRECTED
uuid = { version = "1.8.0", features = ["v4"] }
