[package]
name = "novavault_flux_finance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
once_cell = "1.19.0" # For Lazy static balances
cosmic_data_constellation = { path = "../../../knowledge_nexus_isn/cosmic_data_constellation" }

# Add dependency to ecliptic_concordance for AuroraTransaction types
ecliptic_concordance = { path = "../../../sgs_foundations/ecliptic_concordance" }