[package]
name = "starsenate_collectives_governance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 # Add dependencies here
oraclesync_futarchy = { path = "../../../governance_economy/oraclesync_futarchy" } # CORRECTED
cosmic_data_constellation = { path = "../../../knowledge_nexus_isn/cosmic_data_constellation" } # CORRECTED
uuid = { version = "1.8.0", features = ["v4"] }