[package]
name = "titanforge_grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
graviton_edge = { path = "../graviton_edge" }
serde = { version = "1.0", features = ["derive"] }
 # Add dependencies here
