[package]
name = "sample_wasm_module_add"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Critical for Wasm library output

[dependencies]
# wasm-bindgen is good for defining clear interfaces, but for a raw wasmi call, not strictly needed.
# For simplicity with wasmi and direct function calls, we might not even need wasm-bindgen here
# if we export functions with simple signatures that wasmi can invoke.
# Let's keep it minimal for now.
